Update and rename 偽元素選擇器練習.html to index.html

--- a/index.html
+++ b/index.html
@@ -84,16 +84,16 @@
     <hr>
     <p>第七行</p>
 
-    <div class="img1"><img src="C:\Users\ian\web\alexis-ren-s1280x1920-436015-1020.jpg" alt="alexis ren" ></div>
-    <div class="img2"><img src="C:\Users\ian\web\alexis-ren-s1280x1920-436015-1020.jpg" alt="alexis ren" ></div>
-    <div class="img3"><img src="C:\Users\ian\web\alexis-ren-s1280x1920-436015-1020.jpg" alt="alexis ren" ></div>
-    <div class="img4"><img src="C:\Users\ian\web\alexis-ren-s1280x1920-436015-1020.jpg" alt="alexis ren" ></div>
-    <div class="img5"><img src="C:\Users\ian\web\alexis-ren-s1280x1920-436015-1020.jpg" alt="alexis ren" ></div>
-    <div class="img6"><img src="C:\Users\ian\web\alexis-ren-s1280x1920-436015-1020.jpg" alt="alexis ren" ></div>
-    <div class="img7"><img src="C:\Users\ian\web\alexis-ren-s1280x1920-436015-1020.jpg" alt="alexis ren" ></div>
-    <div class="img8"><img src="C:\Users\ian\web\alexis-ren-s1280x1920-436015-1020.jpg" alt="alexis ren" ></div>
-    <div class="img9"><img src="C:\Users\ian\web\alexis-ren-s1280x1920-436015-1020.jpg" alt="alexis ren" ></div>
-    <div class="img10"><img src="C:\Users\ian\web\alexis-ren-s1280x1920-436015-1020.jpg" alt="alexis ren" ></div>
+    <div class="img1"><img src="alexis-ren-s1280x1920-436015-1020.jpg" alt="alexis ren" ></div>
+    <div class="img2"><img src="alexis-ren-s1280x1920-436015-1020.jpg" alt="alexis ren" ></div>
+    <div class="img3"><img src="alexis-ren-s1280x1920-436015-1020.jpg" alt="alexis ren" ></div>
+    <div class="img4"><img src="alexis-ren-s1280x1920-436015-1020.jpg" alt="alexis ren" ></div>
+    <div class="img5"><img src="alexis-ren-s1280x1920-436015-1020.jpg" alt="alexis ren" ></div>
+    <div class="img6"><img src="alexis-ren-s1280x1920-436015-1020.jpg" alt="alexis ren" ></div>
+    <div class="img7"><img src="alexis-ren-s1280x1920-436015-1020.jpg" alt="alexis ren" ></div>
+    <div class="img8"><img src="alexis-ren-s1280x1920-436015-1020.jpg" alt="alexis ren" ></div>
+    <div class="img9"><img src="alexis-ren-s1280x1920-436015-1020.jpg" alt="alexis ren" ></div>
+    <div class="img10"><img src="alexis-ren-s1280x1920-436015-1020.jpg" alt="alexis ren" ></div>
     <div class="img11"><img src="Large_Turquoise_Transparent_Frame.png" alt="borderimage"> </div>
     <div class="text"> 給div文字加邊框</div>
 </body>
