--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>偽元素選擇器練習</title>
+    <title>偽元素選擇器練習+換字體</title>
     <style>
         /*@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,400;1,200&display=swap');
         h1, pre, p {font-family: 'Kanit', sans-serif;}*/
