--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </p>
     <h2>6. HCC Huh-7 cell line</h2>
     <p class="intro">
-       <em> P53 </em> mutation is a carcinogenesis important factor<sup>31</sup>. Huh-7 cell line, a well-differential hepatocellular carcinoma, has a <em>p53</em> 
+       <em> P53 </em> mutation is a carcinogenesis important factor<sup>31</sup>. Huh-7 cell line, a well-differential hepatocellular carcinoma, has a <em>P53</em> 
        gene mutation at codon 220 (A:T→G:C) from a 57 years old male in Japan<sup>6</sup>. Huh-7 cells do not have virus DNA so that the virus interference 
        can be removed, and have been used for the liver cancer study<sup>6</sup>.
     </p>
